--- a/test.conf
+++ b/test.conf
@@ -1,17 +1,44 @@
 [General]
-arch=amd64
-directory=/opt/multistrap/
 cleanup=true
-noauth=true
+noauth=false
 unpack=true
 setupscript=/usr/share/multistrap/chroot.sh
 ignorenativearch=true
-aptsources=Debian
-bootstrap=Debian
+aptsources=debian updates security backports
+bootstrap=debian updates security backports 
 
-[Debian]
-packages=libtext-wrapi18n-perl debconf dash coreutils debianutils login libuuid1 lsb-base ncurses-base libpam0g bsdutils sensible-utils ncurses-bin perl-base sysv-rc libsepol1 libpam-modules tzdata diffutils tar libmount1 zlib1g libgcc1 base-files mount libtext-iconv-perl libncurses5 libattr1 sed e2fslibs base-passwd libcomerr2 mawk debconf-i18n grep passwd hostname libacl1 libpam-runtime sysvinit initscripts libblkid1 libss2 libpam-modules-bin findutils xz-utils e2fsprogs liblzma5 gzip dpkg liblocale-gettext-perl libtinfo5 gcc-4.7-base libc-bin sysvinit-utils multiarch-support libselinux1 libc6 bash util-linux libtext-charwidth-perl gpgv libusb-0.1-4 apt netbase libapt-pkg4.12 libreadline6 iproute gnupg libslang2 debian-archive-keyring libbz2-1.0 libstdc++6 readline-common
+[debian]
+# debian base packages
+packages=apt base-files base-passwd bash bsdutils coreutils dash debconf debconf-i18n 
+packages=debian-archive-keyring debianutils diffutils dpkg e2fslibs e2fsprogs 
+packages=findutils gcc-4.7-base gnupg gpgv grep gzip hostname initscripts iproute 
+packages=libacl1 libapt-pkg4.12 libattr1 libblkid1 libbz2-1.0 libc-bin libc6 
+packages=libcomerr2 libgcc1 liblocale-gettext-perl liblzma5 libmount1 libncurses5 
+packages=libpam-modules libpam-modules-bin libpam-runtime libpam0g libreadline6 
+packages=libselinux1 libsepol1 libslang2 libss2 libstdc++6 libtext-charwidth-perl 
+packages=libtext-iconv-perl libtext-wrapi18n-perl libtinfo5 libusb-0.1-4 libuuid1 
+packages=login lsb-base mawk mount multiarch-support ncurses-base ncurses-bin 
+packages=netbase passwd perl-base readline-common sed sensible-utils sysv-rc 
+packages=sysvinit sysvinit-utils tar tzdata util-linux xz-utils zlib1g
+
+# development dependencies
+packages=ccache devscripts equivs fakeroot gcc-4.7 git lsb-release python-debian
+
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=wheezy
 
+[updates]
+packages=
+source=http://httpredir.debian.org/debian
+suite=wheezy-updates
+
+[security]
+packages=
+source=http://httpredir.debian.org/debian
+suite=wheezy/updates
+
+[backports]
+packages=
+source=http://httpredir.debian.org/debian
+suite=wheezy-updates
