--- a/test.conf
+++ b/test.conf
@@ -35,7 +35,7 @@ suite=wheezy-updates
 
 [security]
 packages=
-source=http://httpredir.debian.org/debian
+source=http://security.debian.org
 suite=wheezy/updates
 
 [backports]
