--- a/test.conf
+++ b/test.conf
@@ -41,4 +41,4 @@ suite=wheezy/updates
 [backports]
 packages=
 source=http://httpredir.debian.org/debian
-suite=wheezy-updates
+suite=wheezy-backports
